@@ -21,29 +21,12 @@
 source "$BIOBASH_NATIVE_LIB_PATH/bb_native.sh"; 
 
 
-
-
 help="
 	== BioBash get_fasta headers == 
 
 	usage: bb_get_fasta_headers -i [fasta file]
 	"
 
-args=$(io::script_has_args "$#")
-#echo "$args"
-
-isPipe=$(io::input_is_pipe)
-#echo "$isPipe"
-
-# If script is called without arguments and is not part of a pipe,
-# means that we should show help.
-
-if [[ $args = "FALSE" && $isPipe = "FALSE" ]]; then
-
-	echo "$help"
-fi
-
-exit
 #--------------------------------------------------------------------------
 #						Validate Input
 #--------------------------------------------------------------------------
@@ -51,64 +34,71 @@ exit
 # All explanation for this section can be found here:
 # https://github.com/ampinzonv/biobash2/wiki/Blog::File-Descriptors
 # https://github.com/ampinzonv/biobash2/wiki/Blog::BB-input-behavior
+hasArgs=$(io::script_has_args "$#")
+#echo "has arguments?: $hasArgs"
+isPipe=$(io::input_is_pipe)
+#echo "is pipe?: $isPipe"
 
-# When script is called without arguments, display help.
+# If script is called without arguments and is not part of a pipe,
+# means that we should show help.
+if [[ $hasArgs = 1 && $isPipe = 1 ]]; then
 
+	echo "$help"
+	exit 0
+fi
 
-
-
-# Since by default BB will IGNORE any extra argument we only need to check two things.
-# 1) That data comes via "-i" option using $OPTARG. 
-# 2) That data comes from the terminal.
-# Since the only way that BB script runs without a input file via "-i" option, is if
-# data comes from terminal, we will check this first, because this overrides the use of "-i".
-# The "-t 0" option here means that comes wether re-directed or as a pipe. For example:
-#1)    [andres:~]$  ./myscript2.sh 
-#       -t 0 == true
-#2)    [andres:~]$  ./myscript2.sh myfile.txt 
-#      -t 0 == true
-#3)    [andres:~]$  cat myfile.txt | ./myscript2.sh 
-#      -t 0 == false
-#4)    [andres:~]$  ./myscript2.sh < myfile.txt
-#      -t 0 == false
-if [ -t 0 ]; then
-	#If we are here it means that BB is expecting data from the terminal.
-	# Meaning that nothing comes from the STDOUT via pipe o redirection.
-	# So the only alternative is that input data comes as argument via "-i" option.
+# Since the most common case is to call the script with an argument. We'll
+# evaluate that one first. 
+# It is important to note that this evaluation is very case especific, and depends
+# on the amount of arguments each script needs. In this case I onlñy evaluate "-i"
+# because bb_get_fasta_headers only receives one argument (-i).
+# Therefore EVEN WHEN $hasArgs = 1 sometimes it'd be necessary to evalute arguments apart from the
+# input file or whatever comes via a pipe in a specific script.
+if [ $hasArgs = 0 ];then
 	while getopts i: option; 
 	do
 		case "${option}" in
 			i)
-				fastaFile="$OPTARG";;
-					
+				fastaFile="$OPTARG";;	
+				#echo $fastaFile
 			\?)
 				feedback::sayfrom "Unknown parameter option." "error"
 				echo "${help}"
 				exit;;
 		esac
 	done
-
-else
+elif [ $hasArgs = 1 ];then
 	# otherwise if we are here it means that BB is expecting data NOT FROM TERMINAL
 	# but from STDOUT via a pipe or redirection.
 	data=$(cat -- "$@")
-	#Create a tmp file to hold data.
-	fastaFile=$(file::make_temp_file)
-		
-	echo "$data" > $fastaFile
-	#cat $fastaFile
-fi
 
+	#Create a tmp file to hold data.
+	# NOTE: Not sure if it is better to work with data on memory or write to a file.
+	# This is something to maybe improve?
+	fastaFile=$(file::make_temp_file)
+	#This is  hack used to clean the environment. The only reason we will erase user data
+	# is because we created, as this temporary file.  This flag will let us know that
+	# we can safely erase this file.
+	tmpFastaFile=0
+
+	# write to file	
+	echo "$data" > $fastaFile
+
+fi
 
 # To this point we have a file. Wether recently created from STDOUT or defined by the
 # user with the "-i" option. We have to make sure file exists.
+# NOTE that it possible to be here because there is ANY STRING after the script (i.e. script foo.txt)
+# so here $hasArgs = 1 is still valid but NOT FUNCTIONAL. 
 fileExists=$(file::file_exists $fastaFile)
 if [[ $fileExists -eq 1 ]];then
-	feedback::sayfrom "Unable to find file: ${fastaFile}." "error"
+	feedback::sayfrom "Unable to find file: ${fastaFile}. Maybe missing -i option?" "error"
 	echo "$help"
 	exit 1
 fi
 
+# Uncomment on debugging
+# echo $fastaFile
 
 # To this point we have a file. Now let's check that it is the kind we need.
 # In this aprticular case we expect a fasta file.
@@ -118,6 +108,11 @@ if [[ $isFasta == "0" ]];then
 	#--- THIS IS THE CORE OF THE SCRIPT
 	grep "^>" "$fastaFile"  | sed -e "s/>//"
 	#---
+
+	# ONLY EXECUTED when data comes from a pipe and temp file was created above.
+	if [ $tmpFastaFile -eq 0 ];then
+		rm $fastaFile
+	fi
 
 else
 	feedback::sayfrom "Provided $fastaFile file, is not a valid Fasta file." "error"
